--- a/ParcelDetailsCRUD/appsettings.json
+++ b/ParcelDetailsCRUD/appsettings.json
@@ -6,5 +6,16 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnection": "server=DESKTOP-1U0BM0H\\SQLEXPRESS;database=Parcel;user Id =sa;password=Anaiyaan@123;"
+
+  },
+
+
+  "FromAddress": "eswaranevignesh@gmail.com",
+  "password": "mzxccxntguhjgvgu"
+
+
+
 }
